--- a/css/main.css
+++ b/css/main.css
@@ -1258,8 +1258,112 @@ header .container .header-content .links > ul li:hover a{
 }
 /* End Skills Section */
 
-/* Start Qoute Section */
-/* End Qoute Section */
+/* Start How It Works Section */
+.howitwork{
+    padding: 100px 0;
+    position: relative;
+    background-color: var(--sectionColor);
+}
+
+.howitwork::before{
+    content: '';
+    position: absolute;
+    background-image: linear-gradient(45deg, var(--sectionColor) 25%, transparent 25%),
+                      linear-gradient(315deg, var(--sectionColor) 25%, transparent 25%);
+    background-size: 20px;
+    top: -20px;
+    left: 0;
+    right: 0;
+    height: 20px;
+}
+
+.howitwork .container .work-content .main-work{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+}
+
+.howitwork .container .work-content .main-work .works{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.howitwork .container .work-content .main-work .works .work{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    background-color: #ececec;
+    max-width: 500px;
+    padding: 20px;
+    border: 2px solid white;
+    position: relative;
+}
+
+.howitwork .container .work-content .main-work .works .work::before{
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    background-color: #d7d7d763;
+    top: 49%;
+    left: 49%;
+}
+
+.howitwork .container .work-content .main-work .works .work:hover:before{
+    animation-name: fillBackground;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+.howitwork .container .work-content .main-work .works .work > img{
+    z-index: 1;
+}
+
+.howitwork .container .work-content .main-work .works .work .text{
+    z-index: 1;
+}
+
+.howitwork .container .work-content .main-work .works .work .text h3{
+    text-transform: capitalize;
+    margin: 0;
+    font-size: 16px;
+    font-weight: 800;
+}
+
+.howitwork .container .work-content .main-work .works .work .text p{
+    margin: 10px 0;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.6;
+    letter-spacing: 0.3px;
+    color: #525252;
+}
+
+@media (max-width:767px){
+    .howitwork .container .work-content .main-work > img{
+        display: none;
+    }
+
+    .howitwork .container .work-content .main-work .works .work{
+        flex-wrap: wrap;
+        margin: 0 10px;
+    }
+
+    .howitwork .container .work-content .main-work .works .work .text h3{
+        text-align: center;
+    }
+}
+
+@media (max-width:991px){
+    .howitwork .container .work-content .main-work{
+        flex-wrap: wrap;
+    }
+}
+
+/* End How It Works Section */
 
 /* Start Pricing Section */
 /* End Pricing Section */
@@ -1457,6 +1561,15 @@ header .container .header-content .links > ul li:hover a{
         -moz-transform: rotatey(0deg);
         -ms-transform: rotatey(0deg);
         -o-transform: rotatey(0deg);
+}
+}
+
+@keyframes fillBackground{
+    100%{
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
 }
 }
 /* End Animation */
