--- a/css/main.css
+++ b/css/main.css
@@ -1365,11 +1365,367 @@ header .container .header-content .links > ul li:hover a{
 
 /* End How It Works Section */
 
-/* Start Pricing Section */
-/* End Pricing Section */
+/* Start Events Section */
+.events{
+    padding: 100px 0;
+}
 
-/* Start Subscribe Section */
-/* End Subscribe Section */
+.events .container .events-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.events .container .events-content .calender{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.events .container .events-content .calender > img{
+    width: 400px;
+}
+
+.events .container .events-content .calender .calender-content{
+    max-width: 400px;
+    text-align: center;
+}
+
+.events .container .events-content .calender .calender-content .date{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.events .container .events-content .calender .calender-content .date .element{
+    border: 1px solid #c7c7c7;
+    flex-basis: 60px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    transition-duration: 0.3s;
+}
+
+.events .container .events-content .calender .calender-content .date .element .num{
+    border-bottom: 1px solid #c7c7c7;
+    padding: 15px;
+    font-size: 28px;
+    color: var(--mainColor);
+    transition-duration: 0.3s;
+}
+
+.events .container .events-content .calender .calender-content .date .element:hover .num,
+.events .container .events-content .calender .calender-content .date .element:hover{
+    border-color: var(--mainColor);
+}
+
+.events .container .events-content .calender .calender-content .date .element .text{
+    flex-basis: 30px;
+    padding: 10px;
+    font-size: 14px;
+    text-transform: capitalize;
+}
+
+.events .container .events-content .calender .calender-content > .text h3{
+    text-transform: capitalize;
+    font-size: 30px;
+    font-weight: 700;
+    letter-spacing: 0.5;
+    margin-bottom: 0;
+}
+
+.events .container .events-content .calender .calender-content > .text p{
+    font-size: 16px;
+    margin-top: 15px;
+    line-height: 1.8;
+    color: #888888;
+}
+
+.events .container .events-content .subscribe{
+    background-color: #f0f0f0;
+    margin: 10px;
+    display: flex;
+    gap: 10px;
+    padding: 25px;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+}
+
+.events .container .events-content .subscribe input{
+    border: 0;
+    padding: 10px 15px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.events .container .events-content .subscribe input:focus{
+    outline: none;
+}
+
+.events .container .events-content .subscribe input::placeholder{
+    font-size: 13px;
+}
+
+.events .container .events-content .subscribe input:focus::placeholder{
+    color: transparent;
+}
+
+.events .container .events-content .subscribe div{
+    background-color: var(--mainColor);
+    color: white;
+    font-size: 15px;
+    text-transform: capitalize;
+    font-weight: 600;
+    padding: 10px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+@media (max-width: 767px){
+    .events .container .events-content .calender > img{
+        width: 270px;
+    }
+
+    .events .container .events-content .calender .calender-content .date .element{
+        flex-basis: 50px;
+    }
+
+    .events .container .events-content .calender .calender-content .date .element .num{
+        padding: 10px;
+    }
+
+    .events .container .events-content .calender .calender-content .date .element .text{
+        padding: 5px;
+    }
+
+    .events .container .events-content .calender .calender-content > .text h3{
+        font-size: 25px;
+    }
+
+    .events .container .events-content .subscribe{
+        padding: 15px;
+    }
+
+    .events .container .events-content .subscribe input{
+        padding: 5px 10px;
+        max-width: 150px;
+    }
+
+    .events .container .events-content .subscribe input::placeholder{
+        font-size: 10px;
+    }
+
+    .events .container .events-content .subscribe div{
+        padding: 7px;
+        font-size: 12px;
+    }
+}
+/* End Events Section */
+
+/* Start pricing Section */
+.pricing{
+    padding: 100px 0;
+    position: relative;
+    background-color: var(--sectionColor);
+}
+
+.pricing::before{
+    position: absolute;
+    content: '';
+    background-image: linear-gradient(45deg, var(--sectionColor) 25%, transparent 25%),
+                      linear-gradient(315deg, var(--sectionColor) 25%, transparent 25%);
+    top: -20px;
+    height: 20px;
+    right: 0;
+    left: 0;
+    background-size: 20px 100%;
+}
+
+.pricing .pricing-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.pricing .pricing-content .plan{
+    background-color: white;
+    flex-basis: 250px;
+    box-shadow: 0 0 10px 0px #bdbdbd;
+    
+}
+
+.pricing .pricing-content .plan:nth-child(2){
+    position: relative;
+    transform: translatey(-20px);
+    -webkit-transform: translatey(-20px);
+    -moz-transform: translatey(-20px);
+    -ms-transform: translatey(-20px);
+    -o-transform: translatey(-20px);
+}
+
+.pricing .pricing-content .plan:nth-child(2)::before{
+    content: 'most popular';
+    text-transform: capitalize;
+    color: white;
+    font-size: 16px;
+    font-weight: 700;
+    position: absolute;
+    top: 0;
+    right: -115px;
+    width: 110px;
+    height: 0;
+    border: calc(36px / 2) solid;
+    border-color: var(--mainColor) transparent var(--mainColor) var(--mainColor);
+    transform-origin: top left;
+    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    z-index: 2;
+}
+
+.pricing .pricing-content .plan .sec-1 h3{
+    text-align: center;
+    margin: 0;
+    padding: 30px 10px 10px;
+    text-transform: capitalize;
+}
+
+.pricing .pricing-content .plan .sec-1{
+    position: relative;
+    z-index: 1;
+}
+
+.pricing .pricing-content .plan .sec-1::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #eeeeee;
+    transform-origin: top right;
+    transform: rotateY(90deg);
+    -webkit-transform: rotateY(90deg);
+    -moz-transform: rotateY(90deg);
+    -ms-transform: rotateY(90deg);
+    -o-transform: rotateY(90deg);
+    z-index: -1;
+}
+
+.pricing .pricing-content .plan:hover .sec-1::after{
+    animation-name: fillBackgroundPlan;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+.pricing .pricing-content .plan .sec-2{
+    position: relative;
+    padding-bottom: 20px;
+    z-index: 1;
+}
+
+.pricing .pricing-content .plan .sec-2::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #eeeeee;
+    transform-origin: top left;
+    transform: rotateY(90deg);
+    -webkit-transform: rotateY(90deg);
+    -moz-transform: rotateY(90deg);
+    -ms-transform: rotateY(90deg);
+    -o-transform: rotateY(90deg);
+    z-index: -1;
+}
+
+.pricing .pricing-content .plan:hover .sec-2::after{
+    animation-name: fillBackgroundPlanLeft;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+.pricing .pricing-content .plan .sec-1 .image{
+    text-align: center;
+    padding: 15px 0;
+}
+
+.pricing .pricing-content .plan .sec-1 p:first-of-type{
+    color: var(--mainColor);
+    font-size: 50px;
+    font-weight: 700;
+    margin: 10px 0 0 0;
+    text-align: center;
+}
+
+.pricing .pricing-content .plan .sec-1 p:first-of-type + p{
+    text-align: center;
+    margin: 0 0 22px 0;
+    color: #a5a5a5;
+    font-size: 14px;
+    text-transform: capitalize;
+}
+
+.pricing .pricing-content .plan .feat{
+    border-top: 1px solid #ebebeb;
+    padding: 12px ;
+    font-size: 14px;
+}
+
+.pricing .pricing-content .plan .feat i{
+    color: var(--mainColor);
+    margin-right: 10px;
+    font-size: 13px;
+}
+
+.pricing .pricing-content .plan .planBtn{
+    text-align: center;
+    color: var(--mainColor);
+    font-size: 15px;
+    font-weight: 700;
+    text-transform: capitalize;
+    border: 2px solid var(--mainColor);
+    margin: 20px 65px 0;
+    padding: 10px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+@media (max-width:991px){
+    .pricing .pricing-content .plan:nth-child(2){
+        transform: translatey(0px);
+        -webkit-transform: translatey(0px);
+        -moz-transform: translatey(0px);
+        -ms-transform: translatey(0px);
+        -o-transform: translatey(0px);
+}
+}
+/* End pricing Section */
 
 /* Start Contact Section */
 /* End Contact Section */
@@ -1570,6 +1926,28 @@ header .container .header-content .links > ul li:hover a{
         height: 100%;
         top: 0;
         left: 0;
+}
+}
+
+@keyframes fillBackgroundPlan{
+    100%{
+        transform-origin: top right;
+        transform: rotateY(0deg);
+        -webkit-transform: rotateY(0deg);
+        -moz-transform: rotateY(0deg);
+        -ms-transform: rotateY(0deg);
+        -o-transform: rotateY(0deg);
+}
+}
+
+@keyframes fillBackgroundPlanLeft{
+    100%{
+        transform-origin: top left;
+        transform: rotateY(0deg);
+        -webkit-transform: rotateY(0deg);
+        -moz-transform: rotateY(0deg);
+        -ms-transform: rotateY(0deg);
+        -o-transform: rotateY(0deg);
 }
 }
 /* End Animation */
