--- a/css/main.css
+++ b/css/main.css
@@ -1968,7 +1968,7 @@ header .container .header-content .links > ul li:hover a{
     color: white;
     animation-name: changeBackground;
     animation-fill-mode: forwards;
-    animation-duration: 25s;
+    animation-duration: 50s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     z-index: -1;
@@ -1981,7 +1981,7 @@ header .container .header-content .links > ul li:hover a{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #0077ffc4;
+    background-color: #0077ffd5;
     z-index: -1;
 }
 
@@ -2461,26 +2461,32 @@ footer .endFooter{
     0%{
         background-image: url("../imgs/discount-background5.jpg");
         background-size: cover;
+        background-position: center;
     }
     20%{
-        background-image: url("../imgs/statsBackground.jpg");
+        background-image: url("../imgs/discount-background1.jpg");
         background-size: cover;
+        background-position: center;
     }
     40%{
         background-image: url("../imgs/discount-background2.jpg");
         background-size: cover;
+        background-position: center;
     }
     60%{
         background-image: url("../imgs/discount-background3.jpg");
         background-size: cover;
+        background-position: center;
     }
     80%{
         background-image: url("../imgs/discount-background4.jpg");
         background-size: cover;
+        background-position: center;
     }
     100%{
         background-image: url("../imgs/discount-background5.jpg");
         background-size: cover;
+        background-position: center;
     }
 }
 /* End Animation */
